Prepare-Stage1/generated-scalalrboot/org/sufrin/scalalr/stage1/ScalaLR.output
Terminals unused in grammar

    NUM
    COMMENT
    LEXICALERROR
    ";"
    "{"
    "}"
    "%type"


Grammar

    0 $accept: Notation $end

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    2 RULES: "%rules"

    3 OptNL: ε
    4      | SEPARATOR

    5 OptPath: ε
    6        | "%path" ID

    7 OptInclude: ε
    8           | "%include" CODE

    9 OptDialects: "%dialect" ID "%scalalr" ID
   10            | "%scalalr" ID "%dialect" ID
   11            | ε

   12 Tokens: ε
   13       | TokenSpec Tokens

   14 TokenSpec: "%left" TypedTerminals
   15          | "%right" TypedTerminals
   16          | "%non" TypedTerminals
   17          | "%token" TypedTerminals

   18 TypedTerminals: TypedTerminal
   19               | TypedTerminal TypedTerminals

   20 TypedTerminal: ID ":" Type
   21              | ID "(" Type ")"
   22              | ID

   23 Tables: ε
   24       | "%tables" ID

   25 Rules: Rule
   26      | Rules SEPARATOR Rule

   27 Rule: LHS "=" OptBar RHS

   28 OptBar: "|"
   29       | ε

   30 LHS: ID ":" Type
   31    | ID

   32 RHS: Production
   33    | Production "|" RHS

   34 Production: NamedFields Action Precedence

   35 NamedFields: "%empty"
   36            | NamedField
   37            | NamedField NamedFields

   38 NamedField: ID
   39           | ID ":" ID

   40 Action: ε
   41       | CODE

   42 Precedence: ε
   43           | "%prec" ID

   44 Type: ID
   45     | ID "[" Types "]"
   46     | "(" Types ")"
   47     | "(" ")"

   48 Types: Type
   49      | Type "," Types


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 1 6 9 10 20 21 22 24 30 31 38 39 43 44 45
    NUM (259)
    CODE (260) 8 41
    COMMENT (261)
    LEXICALERROR (262)
    "[" (263) 45
    "]" (264) 45
    ";" (265)
    "=" (266) 27
    "|" (267) 28 33
    ":" (268) 20 30 39
    "{" (269)
    "}" (270)
    "(" (271) 21 46 47
    ")" (272) 21 46 47
    "," (273) 49
    SEPARATOR (274) 1 4 26
    "%path" (275) 6
    "%type" (276)
    "%empty" (277) 35
    "%notation" (278) 1
    "%package" (279) 1
    "%token" (280) 17
    "%left" (281) 14
    "%right" (282) 15
    "%non" (283) 16
    "%rules" (284) 2
    "%include" (285) 8
    "%prec" (286) 43
    "%tables" (287) 24
    "%dialect" (288) 9 10
    "%scalalr" (289) 9 10


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    Notation (36)
        on left: 1
        on right: 0
    RULES (37)
        on left: 2
        on right: 1
    OptNL (38)
        on left: 3 4
        on right: 1
    OptPath (39)
        on left: 5 6
        on right: 1
    OptInclude (40)
        on left: 7 8
        on right: 1
    OptDialects (41)
        on left: 9 10 11
        on right: 1
    Tokens (42)
        on left: 12 13
        on right: 1 13
    TokenSpec (43)
        on left: 14 15 16 17
        on right: 13
    TypedTerminals (44)
        on left: 18 19
        on right: 14 15 16 17 19
    TypedTerminal (45)
        on left: 20 21 22
        on right: 18 19
    Tables (46)
        on left: 23 24
        on right: 1
    Rules (47)
        on left: 25 26
        on right: 1 26
    Rule (48)
        on left: 27
        on right: 25 26
    OptBar (49)
        on left: 28 29
        on right: 27
    LHS (50)
        on left: 30 31
        on right: 27
    RHS (51)
        on left: 32 33
        on right: 27 33
    Production (52)
        on left: 34
        on right: 32 33
    NamedFields (53)
        on left: 35 36 37
        on right: 34 37
    NamedField (54)
        on left: 38 39
        on right: 36 37
    Action (55)
        on left: 40 41
        on right: 34
    Precedence (56)
        on left: 42 43
        on right: 34
    Type (57)
        on left: 44 45 46 47
        on right: 20 21 30 48 49
    Types (58)
        on left: 48 49
        on right: 45 46 49


State 0

    0 $accept: • Notation $end

    "%notation"  shift, and go to state 1

    Notation  go to state 2


State 1

    1 Notation: "%notation" • ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    ID  shift, and go to state 3


State 2

    0 $accept: Notation • $end

    $end  shift, and go to state 4


State 3

    1 Notation: "%notation" ID • "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    "%package"  shift, and go to state 5


State 4

    0 $accept: Notation $end •

    $default  accept


State 5

    1 Notation: "%notation" ID "%package" • ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    ID  shift, and go to state 6


State 6

    1 Notation: "%notation" ID "%package" ID • OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    "%path"  shift, and go to state 7

    $default  reduce using rule 5 (OptPath)

    OptPath  go to state 8


State 7

    6 OptPath: "%path" • ID

    ID  shift, and go to state 9


State 8

    1 Notation: "%notation" ID "%package" ID OptPath • OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    "%dialect"  shift, and go to state 10
    "%scalalr"  shift, and go to state 11

    $default  reduce using rule 11 (OptDialects)

    OptDialects  go to state 12


State 9

    6 OptPath: "%path" ID •

    $default  reduce using rule 6 (OptPath)


State 10

    9 OptDialects: "%dialect" • ID "%scalalr" ID

    ID  shift, and go to state 13


State 11

   10 OptDialects: "%scalalr" • ID "%dialect" ID

    ID  shift, and go to state 14


State 12

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects • Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    "%tables"  shift, and go to state 15

    $default  reduce using rule 23 (Tables)

    Tables  go to state 16


State 13

    9 OptDialects: "%dialect" ID • "%scalalr" ID

    "%scalalr"  shift, and go to state 17


State 14

   10 OptDialects: "%scalalr" ID • "%dialect" ID

    "%dialect"  shift, and go to state 18


State 15

   24 Tables: "%tables" • ID

    ID  shift, and go to state 19


State 16

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables • OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL

    "%include"  shift, and go to state 20

    $default  reduce using rule 7 (OptInclude)

    OptInclude  go to state 21


State 17

    9 OptDialects: "%dialect" ID "%scalalr" • ID

    ID  shift, and go to state 22


State 18

   10 OptDialects: "%scalalr" ID "%dialect" • ID

    ID  shift, and go to state 23


State 19

   24 Tables: "%tables" ID •

    $default  reduce using rule 24 (Tables)


State 20

    8 OptInclude: "%include" • CODE

    CODE  shift, and go to state 24


State 21

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude • Tokens RULES OptInclude SEPARATOR Rules OptNL

    "%token"  shift, and go to state 25
    "%left"  shift, and go to state 26
    "%right"  shift, and go to state 27
    "%non"  shift, and go to state 28

    $default  reduce using rule 12 (Tokens)

    Tokens     go to state 29
    TokenSpec  go to state 30


State 22

    9 OptDialects: "%dialect" ID "%scalalr" ID •

    $default  reduce using rule 9 (OptDialects)


State 23

   10 OptDialects: "%scalalr" ID "%dialect" ID •

    $default  reduce using rule 10 (OptDialects)


State 24

    8 OptInclude: "%include" CODE •

    $default  reduce using rule 8 (OptInclude)


State 25

   17 TokenSpec: "%token" • TypedTerminals

    ID  shift, and go to state 31

    TypedTerminals  go to state 32
    TypedTerminal   go to state 33


State 26

   14 TokenSpec: "%left" • TypedTerminals

    ID  shift, and go to state 31

    TypedTerminals  go to state 34
    TypedTerminal   go to state 33


State 27

   15 TokenSpec: "%right" • TypedTerminals

    ID  shift, and go to state 31

    TypedTerminals  go to state 35
    TypedTerminal   go to state 33


State 28

   16 TokenSpec: "%non" • TypedTerminals

    ID  shift, and go to state 31

    TypedTerminals  go to state 36
    TypedTerminal   go to state 33


State 29

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens • RULES OptInclude SEPARATOR Rules OptNL

    "%rules"  shift, and go to state 37

    RULES  go to state 38


State 30

   13 Tokens: TokenSpec • Tokens

    "%token"  shift, and go to state 25
    "%left"  shift, and go to state 26
    "%right"  shift, and go to state 27
    "%non"  shift, and go to state 28

    $default  reduce using rule 12 (Tokens)

    Tokens     go to state 39
    TokenSpec  go to state 30


State 31

   20 TypedTerminal: ID • ":" Type
   21              | ID • "(" Type ")"
   22              | ID •

    ":"  shift, and go to state 40
    "("  shift, and go to state 41

    $default  reduce using rule 22 (TypedTerminal)


State 32

   17 TokenSpec: "%token" TypedTerminals •

    $default  reduce using rule 17 (TokenSpec)


State 33

   18 TypedTerminals: TypedTerminal •
   19               | TypedTerminal • TypedTerminals

    ID  shift, and go to state 31

    $default  reduce using rule 18 (TypedTerminals)

    TypedTerminals  go to state 42
    TypedTerminal   go to state 33


State 34

   14 TokenSpec: "%left" TypedTerminals •

    $default  reduce using rule 14 (TokenSpec)


State 35

   15 TokenSpec: "%right" TypedTerminals •

    $default  reduce using rule 15 (TokenSpec)


State 36

   16 TokenSpec: "%non" TypedTerminals •

    $default  reduce using rule 16 (TokenSpec)


State 37

    2 RULES: "%rules" •

    $default  reduce using rule 2 (RULES)


State 38

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES • OptInclude SEPARATOR Rules OptNL

    "%include"  shift, and go to state 20

    $default  reduce using rule 7 (OptInclude)

    OptInclude  go to state 43


State 39

   13 Tokens: TokenSpec Tokens •

    $default  reduce using rule 13 (Tokens)


State 40

   20 TypedTerminal: ID ":" • Type

    ID      shift, and go to state 44
    "("  shift, and go to state 45

    Type  go to state 46


State 41

   21 TypedTerminal: ID "(" • Type ")"

    ID      shift, and go to state 44
    "("  shift, and go to state 45

    Type  go to state 47


State 42

   19 TypedTerminals: TypedTerminal TypedTerminals •

    $default  reduce using rule 19 (TypedTerminals)


State 43

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude • SEPARATOR Rules OptNL

    SEPARATOR  shift, and go to state 48


State 44

   44 Type: ID •
   45     | ID • "[" Types "]"

    "["  shift, and go to state 49

    $default  reduce using rule 44 (Type)


State 45

   46 Type: "(" • Types ")"
   47     | "(" • ")"

    ID      shift, and go to state 44
    "("  shift, and go to state 45
    ")"  shift, and go to state 50

    Type   go to state 51
    Types  go to state 52


State 46

   20 TypedTerminal: ID ":" Type •

    $default  reduce using rule 20 (TypedTerminal)


State 47

   21 TypedTerminal: ID "(" Type • ")"

    ")"  shift, and go to state 53


State 48

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR • Rules OptNL

    ID  shift, and go to state 54

    Rules  go to state 55
    Rule   go to state 56
    LHS    go to state 57


State 49

   45 Type: ID "[" • Types "]"

    ID      shift, and go to state 44
    "("  shift, and go to state 45

    Type   go to state 51
    Types  go to state 58


State 50

   47 Type: "(" ")" •

    $default  reduce using rule 47 (Type)


State 51

   48 Types: Type •
   49      | Type • "," Types

    ","  shift, and go to state 59

    $default  reduce using rule 48 (Types)


State 52

   46 Type: "(" Types • ")"

    ")"  shift, and go to state 60


State 53

   21 TypedTerminal: ID "(" Type ")" •

    $default  reduce using rule 21 (TypedTerminal)


State 54

   30 LHS: ID • ":" Type
   31    | ID •

    ":"  shift, and go to state 61

    $default  reduce using rule 31 (LHS)


State 55

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules • OptNL
   26 Rules: Rules • SEPARATOR Rule

    SEPARATOR  shift, and go to state 62

    $default  reduce using rule 3 (OptNL)

    OptNL  go to state 63


State 56

   25 Rules: Rule •

    $default  reduce using rule 25 (Rules)


State 57

   27 Rule: LHS • "=" OptBar RHS

    "="  shift, and go to state 64


State 58

   45 Type: ID "[" Types • "]"

    "]"  shift, and go to state 65


State 59

   49 Types: Type "," • Types

    ID      shift, and go to state 44
    "("  shift, and go to state 45

    Type   go to state 51
    Types  go to state 66


State 60

   46 Type: "(" Types ")" •

    $default  reduce using rule 46 (Type)


State 61

   30 LHS: ID ":" • Type

    ID      shift, and go to state 44
    "("  shift, and go to state 45

    Type  go to state 67


State 62

    4 OptNL: SEPARATOR •
   26 Rules: Rules SEPARATOR • Rule

    ID  shift, and go to state 54

    $default  reduce using rule 4 (OptNL)

    Rule  go to state 68
    LHS   go to state 57


State 63

    1 Notation: "%notation" ID "%package" ID OptPath OptDialects Tables OptInclude Tokens RULES OptInclude SEPARATOR Rules OptNL •

    $default  reduce using rule 1 (Notation)


State 64

   27 Rule: LHS "=" • OptBar RHS

    "|"  shift, and go to state 69

    $default  reduce using rule 29 (OptBar)

    OptBar  go to state 70


State 65

   45 Type: ID "[" Types "]" •

    $default  reduce using rule 45 (Type)


State 66

   49 Types: Type "," Types •

    $default  reduce using rule 49 (Types)


State 67

   30 LHS: ID ":" Type •

    $default  reduce using rule 30 (LHS)


State 68

   26 Rules: Rules SEPARATOR Rule •

    $default  reduce using rule 26 (Rules)


State 69

   28 OptBar: "|" •

    $default  reduce using rule 28 (OptBar)


State 70

   27 Rule: LHS "=" OptBar • RHS

    ID      shift, and go to state 71
    "%empty"  shift, and go to state 72

    RHS          go to state 73
    Production   go to state 74
    NamedFields  go to state 75
    NamedField   go to state 76


State 71

   38 NamedField: ID •
   39           | ID • ":" ID

    ":"  shift, and go to state 77

    $default  reduce using rule 38 (NamedField)


State 72

   35 NamedFields: "%empty" •

    $default  reduce using rule 35 (NamedFields)


State 73

   27 Rule: LHS "=" OptBar RHS •

    $default  reduce using rule 27 (Rule)


State 74

   32 RHS: Production •
   33    | Production • "|" RHS

    "|"  shift, and go to state 78

    $default  reduce using rule 32 (RHS)


State 75

   34 Production: NamedFields • Action Precedence

    CODE  shift, and go to state 79

    $default  reduce using rule 40 (Action)

    Action  go to state 80


State 76

   36 NamedFields: NamedField •
   37            | NamedField • NamedFields

    ID      shift, and go to state 71
    "%empty"  shift, and go to state 72

    $default  reduce using rule 36 (NamedFields)

    NamedFields  go to state 81
    NamedField   go to state 76


State 77

   39 NamedField: ID ":" • ID

    ID  shift, and go to state 82


State 78

   33 RHS: Production "|" • RHS

    ID      shift, and go to state 71
    "%empty"  shift, and go to state 72

    RHS          go to state 83
    Production   go to state 74
    NamedFields  go to state 75
    NamedField   go to state 76


State 79

   41 Action: CODE •

    $default  reduce using rule 41 (Action)


State 80

   34 Production: NamedFields Action • Precedence

    "%prec"  shift, and go to state 84

    $default  reduce using rule 42 (Precedence)

    Precedence  go to state 85


State 81

   37 NamedFields: NamedField NamedFields •

    $default  reduce using rule 37 (NamedFields)


State 82

   39 NamedField: ID ":" ID •

    $default  reduce using rule 39 (NamedField)


State 83

   33 RHS: Production "|" RHS •

    $default  reduce using rule 33 (RHS)


State 84

   43 Precedence: "%prec" • ID

    ID  shift, and go to state 86


State 85

   34 Production: NamedFields Action Precedence •

    $default  reduce using rule 34 (Production)


State 86

   43 Precedence: "%prec" ID •

    $default  reduce using rule 43 (Precedence)
